--- a/public/stylesheets/nb.css
+++ b/public/stylesheets/nb.css
@@ -439,7 +439,6 @@ del {
 	font-size: 1.1em;
 	text-align: left;
 	padding: 5px 30px 10px 30px;
-	line-height: 1.4em;
 	clear: both;
 }
 #footer_container {
