--- a/public/stylesheets/newstuff.css
+++ b/public/stylesheets/newstuff.css
@@ -10,7 +10,7 @@ ul, ol
 #header {
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
-    height: 90px;
+    height: 100px;
     width: 100%;
 }
 
